--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "generate": "drizzle-kit generate",
+    "migrate": "ts-node src/db/migrate.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +14,16 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "fastify": "^5.2.1",
+    "pg": "^8.13.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.8"
+    "@types/node": "^22.13.8",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.5"
   }
 }
