--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 DATABASE_URL=postgres://danishyousufmir:password@localhost:5432/auto
-KAFKA_BROKERS=localhost:9092
+KAFKA_BROKERS=127.0.0.1:9092
