--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 DATABASE_URL=postgres://danishyousufmir:password@localhost:5432/auto
 KAFKA_BROKERS=127.0.0.1:9092
-USE_DIRECT_INSERT=true
+USE_DIRECT_INSERT=false
